[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/EnemyTestLocation.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemy1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/BulletHelper.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2.67348, -0.353752, 0, 0, 0, 0, 479.779, -0.0323324 )
}

[node name="EnemyTestLocation" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )
Mob1 = ExtResource( 3 )

[node name="EnemyPath" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -2.67348, -0.353752 )
rotation = 0.000666227

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="BulletHelper" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Enemy0" parent="." instance=ExtResource( 2 )]
position = Vector2( 230.548, 340.81 )
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
